# inventario-w

./: .env.example  .gitignore  Control-Panel.bat  MANUAL_USUARIO.md  README.md  composer.json  composer.json.bak  composer.json.minimal  debug_api.php  internal_setup.ps1  inventario_installer.iss  manual.html  manual_instalacion.html  manual_modulos.html  manual_modulos_caja.html  package-lock.json  prepare_installer.ps1  productos.json  setup_server.ps1  tailwind.config.js
.github/workflows/: build-pos.yml
POS-Windows/: .gitignore  build.ps1  build_local.ps1  package.json
POS-Windows/frontend/: index.html
POS-Windows/src-tauri/: Cargo.toml  tauri.conf.json
POS-Windows/src-tauri/icons/: icon.icns
POS-Windows/src-tauri/src/: main.rs
app/Helpers/: settings.php
app/Models/: Caja.php  CajaMovimiento.php  CajaMovimientoCategoria.php  CajaTurno.php  Compra.php  CompraDetalle.php  GlobalSetting.php  Inventario.php  InventarioMovimiento.php  Locale.php  PosVersion.php  Producto.php  ProductoCostoHistorial.php  Proveedor.php  User.php  Venta.php  VentaDetalle.php
app/Observers/: VentaDetalleObserver.php  VentaObserver.php
app/Providers/: AppServiceProvider.php  MoonShineServiceProvider.php
app/Services/: BackupService.php  CashRegisterService.php  CompraService.php  GitHubUpdateService.php  InventoryService.php  POSService.php
bootstrap/: app.php  providers.php
config/: auth.php  livewire.php  moonshine.php
database/migrations/: 2026_03_28_181629_create_inventario_tables.php  (+62 more)
lang/: en.json  es.json  fr.json  pt.json
public/: .htaccess
routes/: api.php  auth.php  web.php
(+119 files in other folders)
