[package]
name = "pos-windows"
version = "1.0.0"
description = "Terminal POS para Inventario-W"
authors = ["Antigravity AI"]
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = [ "window-all", "shell-all", "http-all"] }
tauri-plugin-sql = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", features = ["sqlite"] }

[features]
# default enables signaling and custom protocol
default = [ "custom-protocol" ]
# this feature is used for production builds or when `devPath` points to the filesystem
# it disables the open devtools flag
custom-protocol = [ "tauri/custom-protocol" ]
